news-game/src/components/Talkback/Talkback.module.scss
$main: #aaa;

* {
	transition: all 0.5s;
}
.main {
	--show-link: 0;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	border: solid $main 1px;
	border-radius: 10px;
	padding: 1%;
	box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
	cursor: pointer;
	gap: 1rem;
	p {
		margin: 0;
	}
	.head {
		display: flex;
		justify-content: space-between;
		align-items: center;
		.writer {
			font-size: small;
		}
		.link {
			margin: 0 1rem;
			opacity: var(--show-link);
			pointer-events: all;
			outline: none;
			text-decoration: none;
			padding: 2px 1px 0;
			&:link {
				color: blue;
			}
			&:visited {
				color: purple;
			}
			&:focus,
			&:hover {
				border-bottom: 1px solid;
			}
			&:active {
				color: red;
			}
		}
	}
	.title {
		text-decoration: underline;
	}
	.content {
		background-color: lighten($color: $main, $amount: 25);
		border-radius: 10px;
		padding: 1%;
		overflow-y: scroll;
		@media only screen and (min-width: 600px) {
			&:hover {
				overflow-y: visible;
				scale: 130%;
				translate: 0 -40%;
				&.content-long {
					max-height: 20rem;
					overflow-y: scroll;
					position: absolute;
				}
			}
		}
	}
	&:hover:not(.correct, .incorrect) {
		background-color: lighten($color: $main, $amount: 15);
		scale: 0.95;
	}
}
.correct {
	background-color: #4ca143;
	scale: 102%;
}

.incorrect {
	background-color: #d0393e;
}

.correct,
.incorrect {
	--show-link: 1;
	cursor: unset;
}

